--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,7 +2,7 @@
   font-size: 4rem;
   font-weight: bold;
   text-align: center;
-  background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
+  background-image: url(../public/giphy.webp);
   background-size: cover;
   color: transparent;
   background-clip: text;
